core/src/snapshots/wahgex__compile__tests__simple_repetition.snap
---
source: core/src/compile.rs
expression: pretty
---
(module
  (type $sparse_set_contains_fn (;0;) (func (param i32 i32 i32) (result i32)))
  (type $sparse_set_insert_fn (;1;) (func (param i32 i32 i32) (result i32)))
  (type $epsilon_closure_fn (;2;) (func (param i64 i64 i64 i32 i32) (result i32)))
  (type $branch_to_epsilon_closure_fn (;3;) (func (param i64 i64 i64 i32 i32 i32) (result i32)))
  (type $transition_fn (;4;) (func (param i64 i64 i64 i32 i32) (result i32 i32)))
  (type $branch_to_transition_fn (;5;) (func (param i64 i64 i64 i32 i32 i32) (result i32 i32)))
  (type $branch_to_transition_is_match_block_sig (;6;) (func (param i32)))
  (type $make_current_transitions_fn (;7;) (func (param i64 i64 i64 i32 i32 i32 i32) (result i32 i32)))
  (type $lookup_start_id_fn (;8;) (func (param i32) (result i32 i32)))
  (type $prepare_input_fn (;9;) (func (param i64) (result i32)))
  (type $pattern_lookup_start_result_block_sig (;10;) (func (param i32)))
  (type $start_config_fn (;11;) (func (param i32 i32) (result i32 i32 i32)))
  (type $start_config_is_some_block_sig (;12;) (func (param i32 i32) (result i32 i32)))
  (type $make_current_transitions_is_match_block_sig (;13;) (func (param i32)))
  (type $is_match_fn (;14;) (func (param i32 i32 i64 i64 i64) (result i32)))
  (memory $haystack (;0;) i64 1)
  (memory $state (;1;) 1 1)
  (export "prepare_input" (func $prepare_input))
  (export "is_match" (func $is_match))
  (export "haystack" (memory $haystack))
  (func $sparse_set_contains (;0;) (type $sparse_set_contains_fn) (param $set_ptr i32) (param $set_len i32) (param $state_id i32) (result i32)
    (local $index i32)
    local.get $state_id
    i32.const 1
    i32.mul
    local.get $set_ptr
    i32.add
    i32.load8_u $state offset=9
    local.tee $index
    local.get $set_len
    i32.ge_u
    if ;; label = @1
      i32.const 0
      return
    end
    local.get $index
    i32.const 1
    i32.mul
    local.get $set_ptr
    i32.add
    i32.load8_u $state
    local.get $state_id
    i32.eq
  )
  (func $sparse_set_insert (;1;) (type $sparse_set_insert_fn) (param $set_len i32) (param $state_id i32) (param $set_ptr i32) (result i32)
    local.get $set_ptr
    local.get $set_len
    local.get $state_id
    call $sparse_set_contains
    i32.const 1
    i32.eq
    if ;; label = @1
      local.get $set_len
      return
    end
    local.get $set_len
    i32.const 1
    i32.mul
    local.get $set_ptr
    i32.add
    local.get $state_id
    i32.store8 $state
    local.get $state_id
    i32.const 1
    i32.mul
    local.get $set_ptr
    i32.add
    local.get $set_len
    i32.store8 $state offset=9
    local.get $set_len
    i32.const 1
    i32.add
  )
  (func $epsilon_closure_s0 (;2;) (type $epsilon_closure_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $next_set_ptr i32) (param $next_set_len i32) (result i32)
    (local $new_next_set_len i32)
    local.get $next_set_len
    i32.const 0
    local.get $next_set_ptr
    call $sparse_set_insert
    i32.const 1
    local.get $next_set_ptr
    call $sparse_set_insert
    i32.const 2
    local.get $next_set_ptr
    call $sparse_set_insert
    i32.const 3
    local.get $next_set_ptr
    call $sparse_set_insert
  )
  (func $epsilon_closure_s2 (;3;) (type $epsilon_closure_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $next_set_ptr i32) (param $next_set_len i32) (result i32)
    (local $new_next_set_len i32)
    local.get $next_set_len
    i32.const 2
    local.get $next_set_ptr
    call $sparse_set_insert
    i32.const 3
    local.get $next_set_ptr
    call $sparse_set_insert
  )
  (func $epsilon_closure_s6 (;4;) (type $epsilon_closure_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $next_set_ptr i32) (param $next_set_len i32) (result i32)
    (local $new_next_set_len i32)
    local.get $next_set_len
    i32.const 3
    local.get $next_set_ptr
    call $sparse_set_insert
    i32.const 6
    local.get $next_set_ptr
    call $sparse_set_insert
    i32.const 7
    local.get $next_set_ptr
    call $sparse_set_insert
    i32.const 8
    local.get $next_set_ptr
    call $sparse_set_insert
  )
  (func $epsilon_closure_s7 (;5;) (type $epsilon_closure_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $next_set_ptr i32) (param $next_set_len i32) (result i32)
    (local $new_next_set_len i32)
    local.get $next_set_len
    i32.const 7
    local.get $next_set_ptr
    call $sparse_set_insert
    i32.const 8
    local.get $next_set_ptr
    call $sparse_set_insert
  )
  (func $branch_to_epsilon_closure (;6;) (type $branch_to_epsilon_closure_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $next_set_ptr i32) (param $next_set_len i32) (param $state_id i32) (result i32)
    local.get $state_id
    i32.const 0
    i32.eq
    if ;; label = @1
      local.get $haystack_ptr
      local.get $haystack_len
      local.get $at_offset
      local.get $next_set_ptr
      local.get $next_set_len
      call $epsilon_closure_s0
      return
    end
    local.get $state_id
    i32.const 2
    i32.eq
    if ;; label = @1
      local.get $haystack_ptr
      local.get $haystack_len
      local.get $at_offset
      local.get $next_set_ptr
      local.get $next_set_len
      call $epsilon_closure_s2
      return
    end
    local.get $state_id
    i32.const 6
    i32.eq
    if ;; label = @1
      local.get $haystack_ptr
      local.get $haystack_len
      local.get $at_offset
      local.get $next_set_ptr
      local.get $next_set_len
      call $epsilon_closure_s6
      return
    end
    local.get $state_id
    i32.const 7
    i32.eq
    if ;; label = @1
      local.get $haystack_ptr
      local.get $haystack_len
      local.get $at_offset
      local.get $next_set_ptr
      local.get $next_set_len
      call $epsilon_closure_s7
      return
    end
    local.get $next_set_len
    local.get $state_id
    local.get $next_set_ptr
    call $sparse_set_insert
  )
  (func $transition_s1 (;7;) (type $transition_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $next_set_ptr i32) (param $next_set_len i32) (result i32 i32)
    (local $byte i32) (local $next_state i32)
    local.get $at_offset
    local.get $haystack_len
    i64.ge_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    local.get $haystack_ptr
    local.get $at_offset
    i64.add
    i32.load8_u
    local.set $byte
    i32.const 0
    local.get $byte
    i32.gt_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    local.get $byte
    i32.const 255
    i32.gt_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    i32.const 0
    local.set $next_state
    local.get $at_offset
    i64.const 1
    i64.add
    local.set $at_offset
    local.get $haystack_ptr
    local.get $haystack_len
    local.get $at_offset
    local.get $next_set_ptr
    local.get $next_set_len
    local.get $next_state
    call $branch_to_epsilon_closure
    i32.const 0
  )
  (func $transition_s3 (;8;) (type $transition_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $next_set_ptr i32) (param $next_set_len i32) (result i32 i32)
    (local $byte i32) (local $next_state i32)
    local.get $at_offset
    local.get $haystack_len
    i64.ge_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    local.get $haystack_ptr
    local.get $at_offset
    i64.add
    i32.load8_u
    local.set $byte
    i32.const 97
    local.get $byte
    i32.gt_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    local.get $byte
    i32.const 97
    i32.gt_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    i32.const 4
    local.set $next_state
    local.get $at_offset
    i64.const 1
    i64.add
    local.set $at_offset
    local.get $haystack_ptr
    local.get $haystack_len
    local.get $at_offset
    local.get $next_set_ptr
    local.get $next_set_len
    local.get $next_state
    call $branch_to_epsilon_closure
    i32.const 0
  )
  (func $transition_s4 (;9;) (type $transition_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $next_set_ptr i32) (param $next_set_len i32) (result i32 i32)
    (local $byte i32) (local $next_state i32)
    local.get $at_offset
    local.get $haystack_len
    i64.ge_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    local.get $haystack_ptr
    local.get $at_offset
    i64.add
    i32.load8_u
    local.set $byte
    i32.const 98
    local.get $byte
    i32.gt_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    local.get $byte
    i32.const 98
    i32.gt_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    i32.const 5
    local.set $next_state
    local.get $at_offset
    i64.const 1
    i64.add
    local.set $at_offset
    local.get $haystack_ptr
    local.get $haystack_len
    local.get $at_offset
    local.get $next_set_ptr
    local.get $next_set_len
    local.get $next_state
    call $branch_to_epsilon_closure
    i32.const 0
  )
  (func $transition_s5 (;10;) (type $transition_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $next_set_ptr i32) (param $next_set_len i32) (result i32 i32)
    (local $byte i32) (local $next_state i32)
    local.get $at_offset
    local.get $haystack_len
    i64.ge_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    local.get $haystack_ptr
    local.get $at_offset
    i64.add
    i32.load8_u
    local.set $byte
    i32.const 99
    local.get $byte
    i32.gt_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    local.get $byte
    i32.const 99
    i32.gt_u
    if ;; label = @1
      local.get $next_set_len
      i32.const 0
      return
    end
    i32.const 6
    local.set $next_state
    local.get $at_offset
    i64.const 1
    i64.add
    local.set $at_offset
    local.get $haystack_ptr
    local.get $haystack_len
    local.get $at_offset
    local.get $next_set_ptr
    local.get $next_set_len
    local.get $next_state
    call $branch_to_epsilon_closure
    i32.const 0
  )
  (func $transition_s8 (;11;) (type $transition_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $next_set_ptr i32) (param $next_set_len i32) (result i32 i32)
    local.get $next_set_len
    i32.const 1
  )
  (func $branch_to_transition (;12;) (type $branch_to_transition_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $next_set_ptr i32) (param $next_set_len i32) (param $state_id i32) (result i32 i32)
    block $fallback_block
      block ;; label = @2
        block ;; label = @3
          block ;; label = @4
            block ;; label = @5
              block ;; label = @6
                block ;; label = @7
                  local.get $state_id
                  br_table $fallback_block 0 (;@7;) $fallback_block 1 (;@6;) 2 (;@5;) 3 (;@4;) $fallback_block $fallback_block 4 (;@3;) $fallback_block
                end
                local.get $haystack_ptr
                local.get $haystack_len
                local.get $at_offset
                local.get $next_set_ptr
                local.get $next_set_len
                call $transition_s1
                return
              end
              local.get $haystack_ptr
              local.get $haystack_len
              local.get $at_offset
              local.get $next_set_ptr
              local.get $next_set_len
              call $transition_s3
              return
            end
            local.get $haystack_ptr
            local.get $haystack_len
            local.get $at_offset
            local.get $next_set_ptr
            local.get $next_set_len
            call $transition_s4
            return
          end
          local.get $haystack_ptr
          local.get $haystack_len
          local.get $at_offset
          local.get $next_set_ptr
          local.get $next_set_len
          call $transition_s5
          return
        end
        local.get $haystack_ptr
        local.get $haystack_len
        local.get $at_offset
        local.get $next_set_ptr
        local.get $next_set_len
        call $transition_s8
        return
      end
    end
    local.get $next_set_len
    i32.const 0
  )
  (func $make_current_transitions (;13;) (type $make_current_transitions_fn) (param $haystack_ptr i64) (param $haystack_len i64) (param $at_offset i64) (param $current_set_ptr i32) (param $current_set_len i32) (param $next_set_ptr i32) (param $next_set_len i32) (result i32 i32)
    (local $loop_index i32) (local $state_id i32) (local $new_next_set_len i32)
    i32.const 0
    local.set $loop_index
    local.get $next_set_len
    local.set $new_next_set_len
    loop $set_iter_loop
      local.get $loop_index
      local.get $current_set_len
      i32.ge_u
      if ;; label = @2
        local.get $new_next_set_len
        i32.const 0
        return
      end
      local.get $loop_index
      i32.const 1
      i32.mul
      local.get $current_set_ptr
      i32.add
      i32.load8_u $state
      local.set $state_id
      local.get $haystack_ptr
      local.get $haystack_len
      local.get $at_offset
      local.get $next_set_ptr
      local.get $new_next_set_len
      local.get $state_id
      call $branch_to_transition
      if (type $branch_to_transition_is_match_block_sig) (param i32) ;; label = @2
        i32.const 1
        return
      else
        local.set $new_next_set_len
      end
      local.get $loop_index
      i32.const 1
      i32.add
      local.set $loop_index
      br $set_iter_loop
    end
    local.get $new_next_set_len
    i32.const 0
  )
  (func $lookup_start_id (;14;) (type $lookup_start_id_fn) (param $pattern_id i32) (result i32 i32)
    local.get $pattern_id
    i32.const 1
    i32.ge_u
    if ;; label = @1
      i32.const 0
      i32.const 0
      return
    end
    local.get $pattern_id
    i32.const 1
    i32.mul
    i32.load8_u $state
    i32.const 1
  )
  (func $prepare_input (;15;) (type $prepare_input_fn) (param $haystack_len i64) (result i32)
    (local $num_new_page_required i64)
    local.get $haystack_len
    i64.const 0
    i64.add
    i64.const 0
    i64.eq
    if ;; label = @1
      i32.const 0
      return
    end
    local.get $haystack_len
    i64.const 0
    i64.add
    i64.const 1
    i64.sub
    i64.const 65536
    i64.div_u
    i64.const 1
    i64.add
    memory.size
    i64.sub
    local.tee $num_new_page_required
    i64.const 0
    i64.gt_s
    if (result i32) ;; label = @1
      local.get $num_new_page_required
      memory.grow
      i64.const -1
      i64.eq
      if ;; label = @2
        unreachable
        return
      end
      i32.const 1
    else
      i32.const 0
    end
  )
  (func $start_config (;16;) (type $start_config_fn) (param $anchored i32) (param $anchored_pattern i32) (result i32 i32 i32)
    (local $pattern_start i32)
    local.get $anchored
    i32.const 0
    i32.eq
    if ;; label = @1
      i32.const 2
      i32.const 0
      i32.const 1
      return
    end
    local.get $anchored
    i32.const 1
    i32.eq
    if ;; label = @1
      i32.const 2
      i32.const 1
      i32.const 1
      return
    end
    local.get $anchored
    i32.const 2
    i32.eq
    if ;; label = @1
      local.get $anchored_pattern
      call $lookup_start_id
      if (type $pattern_lookup_start_result_block_sig) (param i32) ;; label = @2
        i32.const 1
        i32.const 1
        return
      else
        drop
      end
    end
    i32.const 0
    i32.const 0
    i32.const 0
  )
  (func $is_match (;17;) (type $is_match_fn) (param $anchored i32) (param $anchored_pattern i32) (param $span_start i64) (param $span_end i64) (param $haystack_len i64) (result i32)
    (local $at_offset i64) (local $curr_set_ptr i32) (local $next_set_ptr i32) (local $curr_set_len i32) (local $next_set_len i32) (local $start_state_id i32) (local $is_anchored i32)
    local.get $anchored
    local.get $anchored_pattern
    call $start_config
    i32.const 0
    i32.eq
    if (type $start_config_is_some_block_sig) (param i32 i32) (result i32 i32) ;; label = @1
      drop
      drop
      i32.const 0
      return
    end
    local.set $is_anchored
    local.set $start_state_id
    i32.const 1
    local.set $curr_set_ptr
    i32.const 19
    local.set $next_set_ptr
    local.get $span_start
    local.set $at_offset
    loop $haystack_search_loop
      local.get $at_offset
      local.get $span_end
      i64.gt_u
      if ;; label = @2
        i32.const 0
        return
      end
      local.get $curr_set_len
      i32.const 0
      i32.eq
      local.get $is_anchored
      local.get $at_offset
      local.get $span_start
      i64.gt_u
      i32.and
      i32.and
      if ;; label = @2
        i32.const 0
        return
      end
      local.get $is_anchored
      i32.const 0
      i32.eq
      local.get $at_offset
      local.get $span_start
      i64.eq
      i32.or
      if ;; label = @2
        i64.const 0
        local.get $haystack_len
        local.get $at_offset
        local.get $curr_set_ptr
        local.get $curr_set_len
        local.get $start_state_id
        call $branch_to_epsilon_closure
        local.set $curr_set_len
      end
      i64.const 0
      local.get $haystack_len
      local.get $at_offset
      local.get $curr_set_ptr
      local.get $curr_set_len
      local.get $next_set_ptr
      local.get $next_set_len
      call $make_current_transitions
      if (type $make_current_transitions_is_match_block_sig) (param i32) ;; label = @2
        drop
        i32.const 1
        return
      else
        local.set $next_set_len
      end
      local.get $curr_set_ptr
      local.get $next_set_ptr
      local.set $curr_set_ptr
      local.set $next_set_ptr
      local.get $curr_set_len
      local.get $next_set_len
      local.set $curr_set_len
      local.set $next_set_len
      i32.const 0
      local.set $next_set_len
      local.get $at_offset
      i64.const 1
      i64.add
      local.set $at_offset
      br $haystack_search_loop
    end
    i32.const 0
  )
  (data $pattern_start_table (;0;) (memory $state) (i32.const 0) "\02")
)
